compile_errors.txt
    Checking olympus v13.0.0 (/home/tdy/Escritorio/rocky)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `futures`
   --> src/actors/erinyes/recovery.rs:370:5
    |
370 | use futures::future::BoxFuture;
    |     ^^^^^^^ use of unresolved module or unlinked crate `futures`
    |
    = help: if you wanted to use a crate named `futures`, use `cargo add futures` to add it to your `Cargo.toml`

error[E0432]: unresolved import `super::HeartbeatConfig`
  --> src/actors/erinyes/heartbeat.rs:12:22
   |
12 | use super::{GodName, HeartbeatConfig};
   |                      ^^^^^^^^^^^^^^^
   |                      |
   |                      no `HeartbeatConfig` in `actors::erinyes`
   |                      help: a similar name exists in the module: `HeartbeatMonitor`

error: cannot find macro `json` in this scope
   --> src/actors/hermes/mod.rs:189:84
    |
189 | ...                   if let Ok(god) = serde_json::from_value::<GodName>(json!(god_name)) {
    |                                                                          ^^^^
    |
help: consider importing this macro
    |
  5 + use serde_json::json;
    |

error: cannot find macro `debug` in this scope
   --> src/actors/hades/audit.rs:194:21
    |
194 | ...   debug!("ðŸ“ Audit: {} by {} on {} - SUCCESS", action, actor, resource);
    |       ^^^^^
    |
help: consider importing this macro
    |
  5 + use tracing::debug;
    |

error[E0407]: method `handle_command` is not a member of trait `OlympianActor`
   --> src/actors/erinyes/mod.rs:335:5
    |
335 | /     async fn handle_command(&mut self, cmd: CommandPayload) -> Result<ResponsePayload,...
336 | |         match cmd {
337 | |             CommandPayload::ConfigureHeartbeat { actor, interval_ms } => {
338 | |                 self.heartbeat_monitor.set_interval(actor, interval_ms).await;
...   |
369 | |     }
    | |_____^ not a member of trait `OlympianActor`
